--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -15,9 +15,27 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-Pos=974,649
-Size=297,57
+ViewportPos=240,455
+ViewportId=0xA4D966FE
+Size=340,32
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Camera]
+Pos=60,60
+Size=96,226
 Collapsed=0
 
+[Window][Camera Properties]
+ViewportPos=240,455
+ViewportId=0xA4D966FE
+Pos=0,34
+Size=340,459
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
+DockNode    ID=0x00000001 Pos=240,455 Size=340,493 Split=Y Selected=0x2283396E
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=372,32 Selected=0x1C33C293
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=372,801 Selected=0x2283396E
 
