Added Light Class

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -15,10 +15,11 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-Pos=49,152
-Size=340,32
+ViewportPos=150,188
+ViewportId=0xA4D966FE
+Size=454,55
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][Camera]
 Pos=60,60
@@ -26,13 +27,40 @@ Size=96,226
 Collapsed=0
 
 [Window][Camera Properties]
-Pos=49,186
-Size=340,459
+ViewportPos=150,188
+ViewportId=0xA4D966FE
+Pos=0,420
+Size=454,281
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Model Properites]
+ViewportPos=150,188
+ViewportId=0xA4D966FE
+Pos=0,134
+Size=454,284
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Model]
+ViewportPos=150,188
+ViewportId=0xA4D966FE
+Pos=0,57
+Size=454,75
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Light Properties]
+Pos=1045,8
+Size=232,311
+Collapsed=0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=213,339 Size=340,493 Split=Y Selected=0x2283396E
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=372,32 Selected=0x1C33C293
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=372,801 Selected=0x2283396E
+DockNode        ID=0x00000001 Pos=150,188 Size=454,701 Split=Y Selected=0x2283396E
+  DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=340,32 Selected=0x1C33C293
+  DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=340,372 Split=Y Selected=0x6DC95BA9
+    DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=454,75 Selected=0x16545DDD
+    DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=454,565 Split=Y Selected=0x6DC95BA9
+      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=454,283 Selected=0x6DC95BA9
+      DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=454,280 Selected=0x2283396E
 
