--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -15,9 +15,8 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=150,188
-ViewportId=0xA4D966FE
-Size=454,55
+Pos=21,8
+Size=454,52
 Collapsed=0
 DockId=0x00000004,0
 
@@ -27,40 +26,44 @@ Size=96,226
 Collapsed=0
 
 [Window][Camera Properties]
-ViewportPos=150,188
-ViewportId=0xA4D966FE
-Pos=0,420
-Size=454,281
+Pos=21,405
+Size=454,265
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Model Properites]
-ViewportPos=150,188
-ViewportId=0xA4D966FE
-Pos=0,134
-Size=454,284
+Pos=21,135
+Size=454,268
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Model]
-ViewportPos=150,188
-ViewportId=0xA4D966FE
-Pos=0,57
-Size=454,75
+Pos=21,62
+Size=454,71
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Light Properties]
-Pos=1045,8
-Size=232,311
+Pos=980,19
+Size=287,340
 Collapsed=0
+DockId=0x00000009,0
+
+[Window][Material Properties]
+Pos=980,361
+Size=287,115
+Collapsed=0
+DockId=0x0000000A,0
 
 [Docking][Data]
-DockNode        ID=0x00000001 Pos=150,188 Size=454,701 Split=Y Selected=0x2283396E
+DockNode        ID=0x00000001 Pos=237,247 Size=454,662 Split=Y Selected=0x2283396E
   DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=340,32 Selected=0x1C33C293
   DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=340,372 Split=Y Selected=0x6DC95BA9
     DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=454,75 Selected=0x16545DDD
     DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=454,565 Split=Y Selected=0x6DC95BA9
       DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=454,283 Selected=0x6DC95BA9
       DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=454,280 Selected=0x2283396E
+DockNode        ID=0x00000008 Pos=1196,258 Size=287,457 Split=Y
+  DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=232,328 Selected=0x668F7F0C
+  DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=232,111 Selected=0x23F29E54
 
