Added Viewport feature
The scene is now rendered onto a separate frame buffer which can now be displayed in a viewport window with imgui , @TODO Setup Postprocessing by generating the image with a diffirent shader for more control and render that onto a quad

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -26,16 +26,16 @@ Size=96,226
 Collapsed=0
 
 [Window][Camera Properties]
-Pos=950,285
-Size=330,435
+Pos=1666,402
+Size=254,615
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x00000010,0
 
 [Window][Model Properites]
 Pos=20,137
 Size=371,268
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000007,0
 
 [Window][Model]
 Pos=20,64
@@ -56,45 +56,70 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Outliner]
-Pos=950,19
-Size=330,264
+Pos=1666,19
+Size=254,381
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x0000000F,0
 
 [Window][Debug]
-Pos=0,573
-Size=426,147
+Pos=361,808
+Size=1303,209
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x00000012,0
 
 [Window][Dear ImGui Demo]
 Pos=0,19
-Size=426,552
+Size=359,788
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x0000000C,0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1280,720
+Size=1920,1017
 Collapsed=0
 
+[Window][Dear ImGui Metrics]
+Pos=60,60
+Size=338,239
+Collapsed=0
+
+[Window][OpenGL Texture Text]
+Pos=171,19
+Size=669,701
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][Viewport]
+Pos=361,19
+Size=1303,787
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Scene Settings]
+Pos=0,809
+Size=359,208
+Collapsed=0
+DockId=0x00000013,0
+
 [Docking][Data]
-DockNode              ID=0x00000008 Pos=1386,195 Size=245,457 Split=Y
-  DockNode            ID=0x00000009 Parent=0x00000008 SizeRef=232,328 Selected=0x668F7F0C
-  DockNode            ID=0x0000000A Parent=0x00000008 SizeRef=232,111 Selected=0x23F29E54
-DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=190,232 Size=1280,701 Split=X
-  DockNode            ID=0x0000000C Parent=0x3BC79352 SizeRef=426,701 Split=Y Selected=0xE927CF2F
-    DockNode          ID=0x00000010 Parent=0x0000000C SizeRef=327,552 Selected=0xE927CF2F
-    DockNode          ID=0x00000011 Parent=0x0000000C SizeRef=327,147 Selected=0xAD6468A3
-  DockNode            ID=0x0000000D Parent=0x3BC79352 SizeRef=852,701 Split=X
-    DockNode          ID=0x0000000B Parent=0x0000000D SizeRef=520,701 CentralNode=1
-    DockNode          ID=0x00000001 Parent=0x0000000D SizeRef=330,701 Split=Y Selected=0x2283396E
-      DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=340,32 Selected=0x1C33C293
-      DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=340,372 Split=Y Selected=0x6DC95BA9
-        DockNode      ID=0x00000006 Parent=0x00000005 SizeRef=454,75 Selected=0x16545DDD
-        DockNode      ID=0x00000007 Parent=0x00000005 SizeRef=454,565 Split=Y Selected=0x6DC95BA9
-          DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=454,283 Selected=0x6DC95BA9
-          DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=454,280 Split=Y Selected=0x2283396E
-            DockNode  ID=0x0000000E Parent=0x00000003 SizeRef=371,264 Selected=0x4558F46E
-            DockNode  ID=0x0000000F Parent=0x00000003 SizeRef=371,435 Selected=0x2283396E
+DockNode            ID=0x00000008 Pos=1386,195 Size=245,457 Split=Y
+  DockNode          ID=0x00000009 Parent=0x00000008 SizeRef=232,328 Selected=0x668F7F0C
+  DockNode          ID=0x0000000A Parent=0x00000008 SizeRef=232,111 Selected=0x23F29E54
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,42 Size=1920,998 Split=X
+  DockNode          ID=0x00000003 Parent=0x3BC79352 SizeRef=239,701 Split=Y Selected=0xE927CF2F
+    DockNode        ID=0x0000000C Parent=0x00000003 SizeRef=200,788 Selected=0xE927CF2F
+    DockNode        ID=0x00000013 Parent=0x00000003 SizeRef=200,208 Selected=0x4795D75A
+  DockNode          ID=0x00000011 Parent=0x3BC79352 SizeRef=1039,701 Split=X
+    DockNode        ID=0x0000000D Parent=0x00000011 SizeRef=868,701 Split=X
+      DockNode      ID=0x0000000B Parent=0x0000000D SizeRef=520,701 Split=Y Selected=0x995B0CF8
+        DockNode    ID=0x00000002 Parent=0x0000000B SizeRef=1362,787 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+        DockNode    ID=0x00000012 Parent=0x0000000B SizeRef=1362,209 Selected=0xAD6468A3
+      DockNode      ID=0x00000001 Parent=0x0000000D SizeRef=330,701 Split=Y Selected=0x2283396E
+        DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=340,32 Selected=0x1C33C293
+        DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=340,372 Split=Y Selected=0x6DC95BA9
+          DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=454,75 Selected=0x16545DDD
+          DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=454,565 Selected=0x6DC95BA9
+    DockNode        ID=0x0000000E Parent=0x00000011 SizeRef=169,701 Split=Y Selected=0x4558F46E
+      DockNode      ID=0x0000000F Parent=0x0000000E SizeRef=330,381 Selected=0x4558F46E
+      DockNode      ID=0x00000010 Parent=0x0000000E SizeRef=330,615 Selected=0x2283396E
 
