--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=923,348
+Size=400,410
 Collapsed=0
 
 [Window][Test]
@@ -25,8 +25,8 @@ Size=96,226
 Collapsed=0
 
 [Window][Camera Properties]
-Pos=1005,392
-Size=275,172
+Pos=1539,832
+Size=381,229
 Collapsed=0
 DockId=0x00000006,0
 
@@ -51,31 +51,31 @@ Size=245,115
 Collapsed=0
 
 [Window][Outliner]
-Pos=1005,19
-Size=275,371
+Pos=1539,19
+Size=381,811
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Debug]
-Pos=252,566
-Size=1028,154
+Pos=252,842
+Size=1285,219
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x0000000D,0
 
 [Window][Dear ImGui Demo]
 Pos=0,19
-Size=250,545
+Size=250,518
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000008,0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1280,720
+Size=1920,1061
 Collapsed=0
 
 [Window][Dear ImGui Metrics]
-Pos=1507,19
-Size=413,114
+Pos=1539,19
+Size=381,147
 Collapsed=0
 DockId=0x00000009,0
 
@@ -86,28 +86,41 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=252,19
-Size=751,545
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][Scene Settings]
-Pos=0,566
-Size=250,154
+Size=1285,821
 Collapsed=0
 DockId=0x0000000B,0
 
+[Window][Scene Settings]
+Pos=0,539
+Size=250,267
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Gizmo Debug]
+Pos=21,635
+Size=256,129
+Collapsed=0
+
+[Window][Gizmo Settings]
+Pos=0,808
+Size=250,253
+Collapsed=0
+DockId=0x0000000E,0
+
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=112,154 Size=1280,701 Split=Y Selected=0x995B0CF8
-  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=1920,545 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=1505,998 Split=X
-      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=250,998 Selected=0xE927CF2F
-      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1253,998 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-    DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=413,998 Split=Y Selected=0x2283396E
-      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=555,371 Split=Y Selected=0x4558F46E
-        DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=413,114 Selected=0xBFF971E3
-        DockNode  ID=0x0000000A Parent=0x00000005 SizeRef=413,413 Selected=0x4558F46E
-      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=555,172 Selected=0x2283396E
-  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=1920,154 Split=X Selected=0xAD6468A3
-    DockNode      ID=0x0000000B Parent=0x00000008 SizeRef=250,154 Selected=0x4795D75A
-    DockNode      ID=0x0000000C Parent=0x00000008 SizeRef=1028,154 Selected=0xAD6468A3
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=8,50 Size=1920,1042 Split=X Selected=0x995B0CF8
+  DockNode        ID=0x00000003 Parent=0x3BC79352 SizeRef=1537,998 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=250,998 Split=Y Selected=0x4795D75A
+      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=250,518 Selected=0xE927CF2F
+      DockNode    ID=0x0000000C Parent=0x00000001 SizeRef=250,522 Split=Y Selected=0x4795D75A
+        DockNode  ID=0x00000007 Parent=0x0000000C SizeRef=250,267 Selected=0x4795D75A
+        DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=250,253 Selected=0xF298864E
+    DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1285,998 Split=Y Selected=0x995B0CF8
+      DockNode    ID=0x0000000B Parent=0x00000002 SizeRef=1285,556 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+      DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=1285,219 Selected=0xAD6468A3
+  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=381,998 Split=Y Selected=0x2283396E
+    DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=555,777 Split=Y Selected=0x4558F46E
+      DockNode    ID=0x00000009 Parent=0x00000005 SizeRef=413,147 Selected=0xBFF971E3
+      DockNode    ID=0x0000000A Parent=0x00000005 SizeRef=413,628 Selected=0x4558F46E
+    DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=555,219 Selected=0x2283396E
 
