Added Multiple lights
Added point lights and pot lights and directional lights

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -75,7 +75,7 @@ Collapsed=0
 
 [Window][Dear ImGui Metrics]
 Pos=1539,19
-Size=381,147
+Size=381,153
 Collapsed=0
 DockId=0x00000009,0
 
@@ -97,8 +97,9 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Gizmo Debug]
-Pos=21,635
-Size=256,129
+ViewportPos=5,668
+ViewportId=0x8671C89F
+Size=235,35
 Collapsed=0
 
 [Window][Gizmo Settings]
