Added ability to select from the outliner
you can now select from the outliner the entity that you want

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -57,14 +57,14 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Debug]
-Pos=252,842
-Size=1285,219
+Pos=252,924
+Size=1285,137
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Dear ImGui Demo]
 Pos=0,19
-Size=250,518
+Size=250,591
 Collapsed=0
 DockId=0x00000008,0
 
@@ -86,39 +86,74 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=252,19
-Size=1285,821
+Size=1285,903
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Scene Settings]
-Pos=0,539
-Size=250,267
+Pos=0,612
+Size=250,238
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000C,0
 
 [Window][Gizmo Debug]
-ViewportPos=5,668
+ViewportPos=3,770
 ViewportId=0x8671C89F
 Size=235,35
 Collapsed=0
 
 [Window][Gizmo Settings]
-Pos=0,808
-Size=250,253
+Pos=0,852
+Size=250,209
 Collapsed=0
 DockId=0x0000000E,0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=60,60
+Size=450,267
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=368,223
+Size=466,391
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=402,381
+Size=450,61
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=429,463
+Size=450,61
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=601,575
+Size=247,48
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=141,66
+Size=607,944
+Collapsed=0
 
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=8,50 Size=1920,1042 Split=X Selected=0x995B0CF8
   DockNode        ID=0x00000003 Parent=0x3BC79352 SizeRef=1537,998 Split=X
     DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=250,998 Split=Y Selected=0x4795D75A
-      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=250,518 Selected=0xE927CF2F
-      DockNode    ID=0x0000000C Parent=0x00000001 SizeRef=250,522 Split=Y Selected=0x4795D75A
-        DockNode  ID=0x00000007 Parent=0x0000000C SizeRef=250,267 Selected=0x4795D75A
-        DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=250,253 Selected=0xF298864E
+      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=250,831 Split=Y Selected=0x4795D75A
+        DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=250,591 Selected=0xE927CF2F
+        DockNode  ID=0x0000000C Parent=0x00000007 SizeRef=250,238 Selected=0x4795D75A
+      DockNode    ID=0x0000000E Parent=0x00000001 SizeRef=250,209 Selected=0xF298864E
     DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1285,998 Split=Y Selected=0x995B0CF8
-      DockNode    ID=0x0000000B Parent=0x00000002 SizeRef=1285,556 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-      DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=1285,219 Selected=0xAD6468A3
+      DockNode    ID=0x0000000B Parent=0x00000002 SizeRef=1285,903 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+      DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=1285,137 Selected=0xAD6468A3
   DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=381,998 Split=Y Selected=0x2283396E
     DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=555,777 Split=Y Selected=0x4558F46E
       DockNode    ID=0x00000009 Parent=0x00000005 SizeRef=413,147 Selected=0xBFF971E3
