Optimized memory usage and import speed by 80% to 130 %
a small optimization in the std::vector usage by allocating the memory before iterating the vectors (we already know the size)

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -25,8 +25,8 @@ Size=96,226
 Collapsed=0
 
 [Window][Camera Properties]
-Pos=1539,832
-Size=381,229
+Pos=1348,832
+Size=572,229
 Collapsed=0
 DockId=0x00000006,0
 
@@ -51,14 +51,14 @@ Size=245,115
 Collapsed=0
 
 [Window][Outliner]
-Pos=1539,19
-Size=381,811
+Pos=1348,19
+Size=572,811
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Debug]
-Pos=252,924
-Size=1285,137
+Pos=252,829
+Size=1094,232
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -74,8 +74,8 @@ Size=1920,1061
 Collapsed=0
 
 [Window][Dear ImGui Metrics]
-Pos=1539,19
-Size=381,153
+Pos=1348,19
+Size=572,153
 Collapsed=0
 DockId=0x00000009,0
 
@@ -86,7 +86,7 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=252,19
-Size=1285,903
+Size=1094,808
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -143,18 +143,23 @@ Pos=141,66
 Size=607,944
 Collapsed=0
 
+[Window][Style Editor]
+Pos=60,60
+Size=339,856
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=8,50 Size=1920,1042 Split=X Selected=0x995B0CF8
-  DockNode        ID=0x00000003 Parent=0x3BC79352 SizeRef=1537,998 Split=X
+  DockNode        ID=0x00000003 Parent=0x3BC79352 SizeRef=1346,998 Split=X
     DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=250,998 Split=Y Selected=0x4795D75A
       DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=250,831 Split=Y Selected=0x4795D75A
         DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=250,591 Selected=0xE927CF2F
         DockNode  ID=0x0000000C Parent=0x00000007 SizeRef=250,238 Selected=0x4795D75A
       DockNode    ID=0x0000000E Parent=0x00000001 SizeRef=250,209 Selected=0xF298864E
-    DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1285,998 Split=Y Selected=0x995B0CF8
-      DockNode    ID=0x0000000B Parent=0x00000002 SizeRef=1285,903 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-      DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=1285,137 Selected=0xAD6468A3
-  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=381,998 Split=Y Selected=0x2283396E
+    DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1094,998 Split=Y Selected=0x995B0CF8
+      DockNode    ID=0x0000000B Parent=0x00000002 SizeRef=1285,808 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+      DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=1285,232 Selected=0xAD6468A3
+  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=572,998 Split=Y Selected=0x2283396E
     DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=555,777 Split=Y Selected=0x4558F46E
       DockNode    ID=0x00000009 Parent=0x00000005 SizeRef=413,147 Selected=0xBFF971E3
       DockNode    ID=0x0000000A Parent=0x00000005 SizeRef=413,628 Selected=0x4558F46E
