Added Shadow Mapping
refactored the rendering a bit and added Directional shadow maps and added PCF filtering

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,167 +1,92 @@
-[Window][Debug##Default]
-Pos=923,348
-Size=400,410
-Collapsed=0
-
-[Window][Test]
-Pos=60,60
-Size=92,48
-Collapsed=0
-
-[Window][ImGui Demo]
-ViewportPos=1404,134
-ViewportId=0x080FC883
-Size=550,680
-Collapsed=0
-
-[Window][Settings]
-Pos=20,10
-Size=371,52
-Collapsed=0
-
-[Window][Camera]
-Pos=60,60
-Size=96,226
-Collapsed=0
-
-[Window][Camera Properties]
-Pos=1348,809
-Size=572,252
-Collapsed=0
-DockId=0x00000006,0
-
-[Window][Model Properites]
-Pos=20,137
-Size=371,268
-Collapsed=0
-
-[Window][Model]
-Pos=20,64
-Size=371,71
-Collapsed=0
-
-[Window][Light Properties]
-Pos=999,25
-Size=245,340
-Collapsed=0
-
-[Window][Material Properties]
-Pos=999,367
-Size=245,115
-Collapsed=0
-
-[Window][Outliner]
-Pos=1348,19
-Size=572,788
-Collapsed=0
-DockId=0x0000000A,0
-
-[Window][Debug]
-Pos=252,829
-Size=1094,232
-Collapsed=0
-DockId=0x0000000D,0
-
-[Window][Dear ImGui Demo]
-Pos=0,19
-Size=250,591
-Collapsed=0
-DockId=0x00000008,0
-
 [Window][DockSpace Demo]
 Pos=0,0
 Size=1920,1061
 Collapsed=0
 
-[Window][Dear ImGui Metrics]
-Pos=1348,19
-Size=572,153
+[Window][Debug##Default]
+Pos=60,60
+Size=400,400
 Collapsed=0
-DockId=0x00000009,0
-
-[Window][OpenGL Texture Text]
-Pos=171,19
-Size=669,701
-Collapsed=0
-
-[Window][Viewport]
-Pos=252,19
-Size=1094,808
-Collapsed=0
-DockId=0x0000000B,0
-
-[Window][Scene Settings]
-Pos=0,612
-Size=250,238
-Collapsed=0
-DockId=0x0000000C,0
 
 [Window][Gizmo Debug]
-ViewportPos=3,770
-ViewportId=0x8671C89F
-Size=235,35
+Pos=15,601
+Size=161,143
 Collapsed=0
 
 [Window][Gizmo Settings]
-Pos=0,852
-Size=250,209
+Pos=0,938
+Size=244,123
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Viewport]
+Pos=246,19
+Size=1407,1042
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][DepthMap]
+Pos=246,19
+Size=1407,1042
+Collapsed=0
+DockId=0x00000001,1
+
+[Window][Outliner]
+Pos=1655,19
+Size=265,204
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Camera Properties]
+Pos=1655,225
+Size=265,292
+Collapsed=0
+DockId=0x0000000B,1
+
+[Window][Scene Settings]
+Pos=0,859
+Size=244,77
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Debug]
+Pos=0,19
+Size=244,838
 Collapsed=0
 DockId=0x0000000E,0
 
-[Window][Example: Property editor]
-Pos=60,60
-Size=430,450
+[Window][Dear ImGui Demo]
+Pos=1655,225
+Size=265,292
 Collapsed=0
+DockId=0x0000000B,0
 
-[Window][Example: Auto-resizing window]
-Pos=60,60
-Size=450,267
+[Window][Shadow Properties]
+Pos=1655,519
+Size=265,542
 Collapsed=0
+DockId=0x0000000C,0
 
-[Window][Example: Custom rendering]
-Pos=368,223
-Size=466,391
+[Window][Dear ImGui Metrics]
+Pos=0,19
+Size=359,238
 Collapsed=0
-
-[Window][Same title as another window##1]
-Pos=402,381
-Size=450,61
-Collapsed=0
-
-[Window][Same title as another window##2]
-Pos=429,463
-Size=450,61
-Collapsed=0
-
-[Window][###AnimatedTitle]
-Pos=601,575
-Size=247,48
-Collapsed=0
-
-[Window][Example: Documents]
-Pos=141,66
-Size=607,944
-Collapsed=0
-
-[Window][Style Editor]
-Pos=60,60
-Size=339,856
-Collapsed=0
+DockId=0x0000000D,0
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=8,50 Size=1920,1042 Split=X Selected=0x995B0CF8
-  DockNode        ID=0x00000003 Parent=0x3BC79352 SizeRef=1346,998 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=250,998 Split=Y Selected=0x4795D75A
-      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=250,831 Split=Y Selected=0x4795D75A
-        DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=250,591 Selected=0xE927CF2F
-        DockNode  ID=0x0000000C Parent=0x00000007 SizeRef=250,238 Selected=0x4795D75A
-      DockNode    ID=0x0000000E Parent=0x00000001 SizeRef=250,209 Selected=0xF298864E
-    DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1094,998 Split=Y Selected=0x995B0CF8
-      DockNode    ID=0x0000000B Parent=0x00000002 SizeRef=1285,808 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-      DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=1285,232 Selected=0xAD6468A3
-  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=572,998 Split=Y Selected=0x2283396E
-    DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=555,788 Split=Y Selected=0x4558F46E
-      DockNode    ID=0x00000009 Parent=0x00000005 SizeRef=413,147 Selected=0xBFF971E3
-      DockNode    ID=0x0000000A Parent=0x00000005 SizeRef=413,628 Selected=0x4558F46E
-    DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=555,252 Selected=0x2283396E
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=8,50 Size=1920,1042 Split=X Selected=0x2283396E
+  DockNode        ID=0x00000005 Parent=0x3BC79352 SizeRef=244,1042 Split=Y Selected=0xAD6468A3
+    DockNode      ID=0x00000007 Parent=0x00000005 SizeRef=302,917 Split=Y Selected=0xAD6468A3
+      DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=302,838 Split=Y Selected=0xAD6468A3
+        DockNode  ID=0x0000000D Parent=0x00000009 SizeRef=302,238 Selected=0xBFF971E3
+        DockNode  ID=0x0000000E Parent=0x00000009 SizeRef=302,598 Selected=0xAD6468A3
+      DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=302,77 Selected=0x4795D75A
+    DockNode      ID=0x00000008 Parent=0x00000005 SizeRef=302,123 Selected=0xF298864E
+  DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=1674,1042 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000006 SizeRef=1407,1042 CentralNode=1 Selected=0x995B0CF8
+    DockNode      ID=0x00000002 Parent=0x00000006 SizeRef=265,1042 Split=Y Selected=0xE927CF2F
+      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=550,204 Selected=0x4558F46E
+      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=550,836 Split=Y Selected=0xE927CF2F
+        DockNode  ID=0x0000000B Parent=0x00000004 SizeRef=501,292 Selected=0xE927CF2F
+        DockNode  ID=0x0000000C Parent=0x00000004 SizeRef=501,542 Selected=0x205D68E7
 
