implementing HDR and PostProcess passes
Added Frostbite's technique Manual Exposure mode for the camera and physical light unit for the sun (lux)  and Added a bright pass wich happen in conjuction it the exposure pass , tone mapping happens after and gamma correction (@TODO add more controls to these processes ) , currently using the ACES filmic tone mapping

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -9,84 +9,105 @@ Size=400,400
 Collapsed=0
 
 [Window][Gizmo Debug]
-Pos=15,601
-Size=161,143
+Pos=0,19
+Size=313,140
 Collapsed=0
+DockId=0x00000008,1
 
 [Window][Gizmo Settings]
-Pos=0,938
-Size=244,123
+Pos=0,19
+Size=313,140
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Viewport]
-Pos=246,19
-Size=1407,1042
+Pos=315,19
+Size=1287,1042
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][DepthMap]
-Pos=246,19
-Size=1407,1042
+Pos=315,19
+Size=1287,1042
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000001,2
 
 [Window][Outliner]
-Pos=1655,19
-Size=265,204
+Pos=1604,19
+Size=316,376
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Camera Properties]
-Pos=1655,225
-Size=265,292
+Pos=0,358
+Size=313,321
 Collapsed=0
-DockId=0x0000000B,1
+DockId=0x0000000C,0
 
 [Window][Scene Settings]
-Pos=0,859
-Size=244,77
+Pos=0,879
+Size=313,182
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Debug]
-Pos=0,19
-Size=244,838
-Collapsed=0
-DockId=0x0000000E,0
-
-[Window][Dear ImGui Demo]
-Pos=1655,225
-Size=265,292
+Pos=0,161
+Size=313,195
 Collapsed=0
 DockId=0x0000000B,0
 
-[Window][Shadow Properties]
-Pos=1655,519
-Size=265,542
+[Window][Dear ImGui Demo]
+Pos=0,161
+Size=313,195
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x0000000B,1
+
+[Window][Shadow Properties]
+Pos=0,681
+Size=313,196
+Collapsed=0
+DockId=0x00000010,0
 
 [Window][Dear ImGui Metrics]
 Pos=0,19
-Size=359,238
+Size=313,244
 Collapsed=0
 DockId=0x0000000D,0
 
+[Window][PostProcess]
+Pos=315,19
+Size=1287,1042
+Collapsed=0
+DockId=0x00000001,1
+
+[Window][Properties]
+Pos=1604,397
+Size=316,664
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][FinalImage]
+Pos=315,19
+Size=1287,1042
+Collapsed=0
+DockId=0x00000001,3
+
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=8,50 Size=1920,1042 Split=X Selected=0x2283396E
-  DockNode        ID=0x00000005 Parent=0x3BC79352 SizeRef=244,1042 Split=Y Selected=0xAD6468A3
-    DockNode      ID=0x00000007 Parent=0x00000005 SizeRef=302,917 Split=Y Selected=0xAD6468A3
-      DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=302,838 Split=Y Selected=0xAD6468A3
-        DockNode  ID=0x0000000D Parent=0x00000009 SizeRef=302,238 Selected=0xBFF971E3
-        DockNode  ID=0x0000000E Parent=0x00000009 SizeRef=302,598 Selected=0xAD6468A3
-      DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=302,77 Selected=0x4795D75A
-    DockNode      ID=0x00000008 Parent=0x00000005 SizeRef=302,123 Selected=0xF298864E
-  DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=1674,1042 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000006 SizeRef=1407,1042 CentralNode=1 Selected=0x995B0CF8
-    DockNode      ID=0x00000002 Parent=0x00000006 SizeRef=265,1042 Split=Y Selected=0xE927CF2F
-      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=550,204 Selected=0x4558F46E
-      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=550,836 Split=Y Selected=0xE927CF2F
-        DockNode  ID=0x0000000B Parent=0x00000004 SizeRef=501,292 Selected=0xE927CF2F
-        DockNode  ID=0x0000000C Parent=0x00000004 SizeRef=501,542 Selected=0x205D68E7
+DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=8,50 Size=1920,1042 Split=X Selected=0x2283396E
+  DockNode            ID=0x00000005 Parent=0x3BC79352 SizeRef=313,1042 Split=Y Selected=0xAD6468A3
+    DockNode          ID=0x00000009 Parent=0x00000005 SizeRef=302,858 Split=Y Selected=0xAD6468A3
+      DockNode        ID=0x0000000D Parent=0x00000009 SizeRef=302,238 Selected=0xBFF971E3
+      DockNode        ID=0x0000000E Parent=0x00000009 SizeRef=302,598 Split=Y Selected=0xAD6468A3
+        DockNode      ID=0x0000000F Parent=0x0000000E SizeRef=300,660 Split=Y Selected=0xE927CF2F
+          DockNode    ID=0x00000008 Parent=0x0000000F SizeRef=300,140 Selected=0x8671C89F
+          DockNode    ID=0x00000007 Parent=0x0000000F SizeRef=300,518 Split=Y Selected=0xE927CF2F
+            DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=300,195 Selected=0xE927CF2F
+            DockNode  ID=0x0000000C Parent=0x00000007 SizeRef=300,321 Selected=0x2283396E
+        DockNode      ID=0x00000010 Parent=0x0000000E SizeRef=300,196 Selected=0x205D68E7
+    DockNode          ID=0x0000000A Parent=0x00000005 SizeRef=302,182 Selected=0x4795D75A
+  DockNode            ID=0x00000006 Parent=0x3BC79352 SizeRef=1605,1042 Split=X
+    DockNode          ID=0x00000001 Parent=0x00000006 SizeRef=1287,1042 CentralNode=1 Selected=0xD5A6CED1
+    DockNode          ID=0x00000002 Parent=0x00000006 SizeRef=316,1042 Split=Y Selected=0xE927CF2F
+      DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=550,376 Selected=0x4558F46E
+      DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=550,664 Selected=0xC89E3217
 
