Refactoring NO MORE ERROR MESSAGES
refactored the way the buffer are created to give more freedom ( see TEXTURE_FORMAT) and removed all error messages exept this one " Program/shader state performance warning: Vertex shader in program 1 is being recompiled based on GL state." wich happens when drawing the first primitive

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -34,9 +34,9 @@ DockId=0x00000001,3
 
 [Window][Outliner]
 Pos=1604,19
-Size=316,376
+Size=316,242
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000011,0
 
 [Window][Camera Properties]
 Pos=0,358
@@ -81,8 +81,8 @@ Collapsed=0
 DockId=0x00000001,1
 
 [Window][Properties]
-Pos=1604,397
-Size=316,664
+Pos=1604,578
+Size=316,483
 Collapsed=0
 DockId=0x00000004,0
 
@@ -91,6 +91,12 @@ Pos=315,19
 Size=1287,1042
 Collapsed=0
 DockId=0x00000001,2
+
+[Window][Texture Editor]
+Pos=1604,263
+Size=316,798
+Collapsed=0
+DockId=0x00000012,0
 
 [Docking][Data]
 DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=8,50 Size=1920,1042 Split=X Selected=0x2283396E
@@ -108,6 +114,8 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=8,50 Size=1920,1042 Sp
   DockNode            ID=0x00000006 Parent=0x3BC79352 SizeRef=1605,1042 Split=X
     DockNode          ID=0x00000001 Parent=0x00000006 SizeRef=1287,1042 CentralNode=1 Selected=0xD5A6CED1
     DockNode          ID=0x00000002 Parent=0x00000006 SizeRef=316,1042 Split=Y Selected=0xE927CF2F
-      DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=550,376 Selected=0x4558F46E
-      DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=550,664 Selected=0xC89E3217
+      DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=550,557 Split=Y Selected=0x4558F46E
+        DockNode      ID=0x00000011 Parent=0x00000003 SizeRef=316,129 Selected=0x4558F46E
+        DockNode      ID=0x00000012 Parent=0x00000003 SizeRef=316,426 Selected=0x7361E594
+      DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=550,483 Selected=0xC89E3217
 
